[package]
name = "duo-rs"
version = "0.1.0"
authors = ["Dhs92 <forehand.alex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
simplelog = "0.7.4"
lazy_static = "*"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]
version = "0.7.3"